--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@ cle
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Factual-AI</title>
+    <title>Factual AI</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
